# ilmo

./: .coverage  .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  Tietosuojaseloste.md  docker-compose.yml  privacy_policy.md  pyproject.toml  tasks.py
.github/: CI.yml  CI_prod.yml
.github/workflows/: CI.yml  CI_prod.yml  publish_main.yml  publish_production.yml
app/: .coveragerc  .pylintrc  db.sqlite3  schema.sql
app/config/: data.csv  db_admin.py  pipeline_test  populate.py  populate_courses.py  populate_groups_reports.py  populate_labs.py  populate_official.py  populate_reports_test.py  populate_users.py  settings.py  superuser.py  test_data_1.csv  test_data_2.csv  test_data_3.csv  test_data_4.csv  test_data_5.csv  test_data_6.csv  test_data_7.csv  test_data_8.csv  urls.py
app/ilmoweb/: admin.py  apps.py  authentication.py  forms.py  models.py  urls.py  views.py
app/ilmoweb/logic/: check_previous_reports.py  courses.py  distint_id.py  files.py  filter_reports.py  labgroups.py  labs.py  mail.py  save_file.py  signup.py  teachermessage.py  test_mail.py  users_info.py
app/ilmoweb/migrations/: 0001_initial.py  0002_alter_user_student_id.py  0002_test_delete_driver.py  0003_remove_labgroups_is_visible_labgroups_status.py  0003_rename_licence_test_data_1_rename_name_test_data_2.py  0004_signup.py  0004_user.py  (+28 more)
documentation/: DoD.md  Retro.docx  Retro.pages  architecture.md  database_schema.md  testing.md
documentation/meetings/: 10_10_23.md  12_9_23  12_9_23.md  14_11_23.md  24_10_23.md  26_9_23.md  28_11_23.md  4_9_23.md  8_12_23.md
(+49 files in other folders)
