[tool.poetry]
name = "ilmo"
version = "0.1.0"
description = ""
authors = ["ellaverak <ella.korkeaaho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.5"
pylint = "^2.17.5"
psycopg2 = "^2.9.7"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
coverage = "^7.3.0"
pytest-playwright = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
